// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeFileUpdater update saves code with new steps 1`] = `
"  someCode();
  await page.click(selectors[0]);
  await page.click(selectors[1]);
  // 🐺 CREATE CODE HERE
  otherCode();"
`;

exports[`CodeFileUpdater update saves code with new steps 2`] = `
"  someCode();
  await page.click(selectors[0]);
  await page.click(selectors[1]);
  await page.type(selectors[2], \\"tomsmith\\");
  await page.press(selectors[3], \\"Tab\\");
  await page.type(selectors[4], \\"SuperSecretPassword!\\");
  await page.press(selectors[5], \\"Enter\\");
  await page.click(selectors[6]);
  // 🐺 CREATE CODE HERE
  otherCode();"
`;
